2014-02-25  Julien Bect  <julien.bect@supelec.fr>

	doc: update some help texts (script names have changed)

	* paramestim/stk_param_estim.m: fix doc
	* utils/stk_conditioning.m: fix doc
	* utils/stk_generate_samplepaths.m: fix doc

2014-02-24  Julien Bect  <julien.bect@supelec.fr>

	Rewrite Octave packaging script in Octave (instead of Python).

	* admin/make_octave_package.m: Translation to the Octave langage
	of make_octave_package.py . Version number now properly set in
	DESCRIPTION based on the one returned by stk_version ().
	* admin/make_octave_package.py: deleted

	Try to solve the problem with MEX-files in private directories.

	* stk_init.m: Build the MEX-files *before* adding STK's
	subdirectories to the path. Finger crossed.
	* stk_build.m: Don't test if MEX-files located in private
	directories are found (not at this point).
	* config/stk_config_testprivatemex.m: New function to test if
	MEX-files located in private directories are found.

	Add load/unload scripts for the MOLE.

	* misc/mole/PKG_ADD.m: New initialization script, that adds
	selected subdirectories of the MOLE to the path.
	* misc/mole/PKG_DEL.m: Remove MOLE subdirectories from the path.
	* config/stk_config_path.m: Remove the part that is now handled by
	the new script (misc/mole/PKG_ADD.m).
	* etc/octave-pkg/pre_install.m: Run misc/mole/PKG_ADD.m first and
	PKG_DEL.m at the end (otherwise the load path would contain
	deleted temp directories after the installation).
	* stk_init.m: Run misc/mole/PKG_ADD.m first.

2014-02-22  Julien Bect  <julien.bect@supelec.fr>

	Rewrite stk_config_rmpath without a call to stk_config_path.

	* config/stk_config_rmpath.m: Rewrite without a call to
	stk_config_path, in prevision of forthcoming changes.

	Rewrite stk_config_addpath in a cleaner way.

	* config/stk_config_addpath.m: Rewrite the function in a cleaner
	way, without the useless output argument.
	* config/stk_config_getroot.m: Add an additional output argument,